--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^3.8.3",
+    "@material-ui/icons": "^3.0.2",
     "@types/jest": "23.3.10",
     "@types/node": "10.12.12",
     "@types/ramda": "^0.25.44",
     "@types/react": "16.7.13",
     "@types/react-dom": "16.0.11",
+    "@types/react-swipeable-views": "^0.12.2",
     "express": "^4.16.4",
     "express-favicon": "^2.0.1",
     "materialize-css": "^1.0.0-rc.2",
@@ -16,7 +19,8 @@
     "ramda": "^0.26.1",
     "react": "16.6.3",
     "react-dom": "16.6.3",
-    "react-scripts": "2.1.1",
+    "react-scripts": "^2.1.5",
+    "react-swipeable-views": "^0.13.1",
     "typescript": "3.2.2"
   },
   "scripts": {
